--- a/docs/NEWS.txt
+++ b/docs/NEWS.txt
@@ -4,19 +4,25 @@ GEGL-0.3.12 2017-02-0x
 Operations
 ~~~~~~~~~~
 
-- new workshop ops: watershed, waterpixels, bayer-matrix, linear-sinusoid, shadows-highlights, integral-image, segment-kmeans, 
-- new common ops: edge-neon, image-gradient, slic, wavelet-blur
+- new ops: edge-neon, image-gradient, slic, wavelet-blur
 - moved from workshop to common: color-warp, component-extract
-- moved from common to workshop: bilateral-filter-fast
-- text: remove now unneeded work-around, ability to control vertical positioning, permit <1.0 font-sizes, handle text-color alpha, other improvements.
+- text: remove now unneeded work-around, ability to control vertical
+  positioning, permit <1.0 font-sizes, handle text-color alpha, other
+  improvements.
 - lens-distortion: default to transparent background - fix transparency fringing glitch.
 - crop: bounding box computation simplifications
 - noise-rgb: add gamma and distribution properties
 - dither: renamed from color-reduction, now with levels instead of bits property controls.
 - high-pass: do inversion, over and contrast in a non-linear space
 - noise-rgb: add linear and gaussian properties
-- transform: add a clip-to-input property, needed for some GIMP corner-cases involving degenerate matrices
+- transform: add a clip-to-input property, needed for some GIMP corner-cases
+  involving degenerate matrices
 - raw-load: improvements and fixes, handle Sony's ARW files
+- exposure: replaced offset with black-level
+- moved from common to workshop: bilateral-filter-fast
+- new workshop ops: watershed, waterpixels, bayer-matrix, linear-sinusoid,
+  shadows-highlights, integral-image, segment-kmeans, 
+- removed ops: gaussian blur old
 
 Core
 ~~~~
@@ -25,6 +31,8 @@ Core
 - cache some babl_format and babl_type return values
 - clean up the way we drop references and free memory
 - detect local ARW and CR2 files as raw, not TIFF
+- mipmap preview rendering code improvements
+- performance improvement to gegl_memset_pattern
 
 Translations
 ~~~~~~~~~~~~
