--- a/docs/NEWS.txt
+++ b/docs/NEWS.txt
@@ -33,36 +33,35 @@ GEGL-0.3.12 2017-02-13
 
 Operations
 ~~~~~~~~~~
-
-- new ops: edge-neon, image-gradient, slic, wavelet-blur
+- new ops: edge-neon, image-gradient, slic, wavelet-blur, waterpixels, watershed
 - moved from workshop to common: color-warp, component-extract
 - text: remove now unneeded work-around, ability to control vertical
-  positioning, permit <1.0 font-sizes, handle text-color alpha, other
-  improvements.
-- lens-distortion: default to transparent background - fix transparency fringing glitch.
+   positioning, permit <1.0 font-sizes, handle text-color alpha, other
+   improvements.
+- lens-distortion: default to transparent background
 - crop: bounding box computation simplifications
 - noise-rgb: add gamma and distribution properties
-- dither: renamed from color-reduction, now with levels instead of bits property controls.
-- high-pass: do inversion, over and contrast in a non-linear space
-- noise-rgb: add linear and gaussian properties
-- transform: add a clip-to-input property, needed for some GIMP corner-cases
-  involving degenerate matrices
-- raw-load: improvements and fixes, handle Sony's ARW files
+- dither: renamed from color-reduction and improved ui/property controls.
+- high-pass: do inversion, over and contrast in non-linear RGB
+- noise-rgb: new linear and gaussian properties
+- transform: added a clip-to-input property
+- raw-load: improvements to handling of Sony's ARW files
 - exposure: replaced offset with black-level
 - moved from common to workshop: bilateral-filter-fast
-- new workshop ops: watershed, waterpixels, bayer-matrix, linear-sinusoid,
-  shadows-highlights, integral-image, segment-kmeans, 
-- removed ops: gaussian blur old
+- new workshop ops: bayer-matrix, linear-sinusoid,
+ shadows-highlights, integral-image, segment-kmeans,
+- removed ops: gaussian-blur-old
 
 Core
 ~~~~
 
-- make some serializations/parameters less locale dependent
-- cache some babl_format and babl_type return values
+- less locale dependent serializations/parameters
+- fix local raw file detection of ARW and CR2 files
+- gegl_memset_pattern performance improvement
 - clean up the way we drop references and free memory
-- detect local ARW and CR2 files as raw, not TIFF
-- mipmap preview rendering code improvements
-- performance improvement to gegl_memset_pattern
+- static caching of some frequently used babl formats/types.
+- mipmap preview render code fixes for the following subset of operations: point
+   operations (filter, and composer subclasses), integer translate, crop.
 
 Translations
 ~~~~~~~~~~~~
